--- a/.hgignore
+++ b/.hgignore
@@ -20,7 +20,8 @@ makehuman/data/litspheres
 makehuman/data/skins
 makehuman/data/teeth
 makehuman/data/tongue
-makehuman/data/languages/empty.ini
+makehuman/data/languages/empty.json
+makehuman/data/languages/english_template.json
 buildscripts/build.conf
 buildscripts/win32/build
 buildscripts/win32/dist
