--- a/.hgignore
+++ b/.hgignore
@@ -9,6 +9,7 @@ syntax: glob
 *.so
 *.bak
 *.orig
+.rej
 images.list
 makehuman/*_contents.txt
 makehuman/data/clothes
@@ -21,6 +22,7 @@ makehuman/data/litspheres
 makehuman/data/skins
 makehuman/data/teeth
 makehuman/data/tongue
+makehuman/data/proxymeshes
 makehuman/data/languages/empty.json
 makehuman/data/languages/english_template.json
 buildscripts/build.conf
